# ssfs

./: Cargo.toml  README.md
assets/: cert.pem  key.pem
scripts/: generate_cert_and_key.sh
src/: main.rs
